--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -1,5 +1,12 @@
+@font-face {
+    font-family: 'Product Sans Regular';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Product Sans Regular'), url('/public_html/assets/fonts/ProductSans-Regular.woff') format('woff');
+}
+
 * {
-	font-family: arial, sans-serif;
+	font-family: 'Product Sans Regular', arial, sans-serif;
 	color: #3c4043;
 }
 
@@ -143,7 +150,7 @@ html, body {
     font-size: 14px;
     font-family: Google Sans,arial,sans-serif;
     border-bottom: 1px solid #ebebeb;
-    margin-top: -21px;
+    margin-top: -10px;
     position: relative;
     z-index: 126;
 	height: 58px;
@@ -164,11 +171,18 @@ html, body {
 
 .navItem a {
 	text-decoration: none;
+	opacity: 0.7;
+}
+
+.navItem.active svg {
+	opacity: 1;
 }
 
 .navContent svg {
 	height: 16px;
     width: 16px;
+	margin-bottom: -3px;
+	opacity: 0.7;
 }
 
 .navBorder {
@@ -179,4 +193,5 @@ html, body {
 
 .active a {
 	color: #1a73e8;
+	opacity: 1;
 }
