--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -62,6 +62,16 @@ html, body {
 
 .searchContainer input[type=text] {
 	padding-left: 40px;
+    width: 100%;
+    outline: none;
+    border: none;
+    background: transparent;
+}
+
+.focusInput {
+	background-color: #fff;
+    box-shadow: 0 1px 6px rgb(32 33 36 / 28%);
+    border-color: rgba(223,225,229,0);
 }
 
 .headerContent .searchContainer {
